<resources>
    <string name="app_name">Make World Better</string>


     <!--Strings for activity Main-->

    <string name="Motto">Together we can make the world better</string>
    <string name="Disclaimer">For each right answer \n We\'ll give a meal for the ones in need</string>
    <string name="pick_one">"Pick one category!"</string>
    <string name="SelectSubject">"Select a subject"</string>
    <string name="StartHelping"> "Start helping"</string>
    <string name="EnglishVocabulary">" English vocabulary"</string>
    <string name="BasicMath">"Basic Math"</string>

    <!--Strings for activity Math-->

    <string name="TitleMath">"Add some food on the table! "</string>
    <string name="Question5">"1) 0.4 x 3 = "</string>
    <string name="hint">"Type your answer here"</string>
    <string name="Submit1">"Submit"</string>
    <string name="Question6">"2) 1.1 x 1.1 = "</string>
    <string name="Q6Option1">"11.1"</string>
    <string name="Q6Option2">"111"</string>
    <string name="Q6Option3">"1.21 "</string>
    <string name="Q6Option4">"12.1"</string>
    <string name="Submit2">"Submit"</string>
    <string name="Question7">"3) A^2 + A^2 = "</string>
    <string name="Q7Option1">"A^2 x 2 "</string>
    <string name="Q7Option2">"A^4"</string>
    <string name="Q7Option3">"2A^2 "</string>
    <string name="Q7Option4">"2A^4"</string>
    <string name="Submit3">"Submit"</string>
    <string name="Question8">"4) 1/2 / 2/5 = "</string>
    <string name="Q8Option1">"3/4"</string>
    <string name="Q8Option2">"2/5"</string>
    <string name="Q8Option3">"5/4 "</string>
    <string name="Q8Option4">"3/5"</string>
    <string name="Submit4">"Submit"</string>
    <string name="Back1">"Home"</string>

    <!--Strings for activity Result-->

    <string name="CongratsMessage">"Thank you for helping!"</string>
    <string name="Score">"Your score is:"</string>
    <string name="Back2">"Home"</string>
    <string name="Share">"Share"</string>
    <string name="SendOpinion">"Send your opinion"</string>
    <string name="Suggest"><u>"Suggest an improvement"</u></string>
    <string name="Suggestion1">"More subjects"</string>
    <string name="Suggestion2">"More questions"</string>
    <string name="Suggestion3">"More functions"</string>
    <string name="Feedback">"Do you like the app?"</string>
    <string name="YesAnswer">"Yes"</string>
    <string name="NoAnswer">"No"</string>
    <string name="SendFeed">"Send feedback"</string>

    <!--Strings for activity Vocabulary-->

    <string name="TitleVocabulary">"Let's talk about hunger"</string>
    <string name="Question1">"1) <b>rhabdomancy</b> means: "</string>
    <string name="Q1Option1">"divination with a rod, wand, or the like "</string>
    <string name="Q1Option2">"divining with crystal, or the like"</string>
    <string name="Q1Option3">"crazy about rhubarb"</string>
    <string name="Q1Option4">"obsession with red"</string>

    <string name="Question2">"2) <b>rheology</b> means: "</string>
    <string name="Q2Option1">"study of heat"</string>
    <string name="Q2Option2">"flow of matter "</string>
    <string name="Q2Option3">"study of rivers"</string>
    <string name="Q2Option4">"heat flow patterns"</string>

    <string name="Question3">"3) <b>sciage</b> means: "</string>
    <string name="Q3Option1">"saw teeth"</string>
    <string name="Q3Option2">"scraping"</string>
    <string name="Q3Option3">"scar tissue"</string>
    <string name="Q3Option4">"saw-like movement "</string>

    <string name="Question4">"4) <b>lansquenet</b> means: "</string>
    <string name="Q4Option1">"basket of fruit"</string>
    <string name="Q4Option2">"card game "</string>
    <string name="Q4Option3">"fancy dog collar"</string>
    <string name="Q4Option4">"lacy bodice"</string>

    <string name="Submit5">"Submit"</string>
    <string name="Back3">"Home"</string>
    <string name="desc1">Banner main activity</string>
    <string name="desc2">Banner math activity</string>
    <string name="desc3">Animation score</string>
    <string name="desc4">Banner result activity</string>
    <string name="desc5">Banner vocabulary activity</string>
    <string name="toastQ1">Answer question 1!</string>
    <string name="toastQ2">Answer question 2!</string>
    <string name="toastQ3">Answer question 3!</string>
    <string name="toastQ4">Answer question 4!</string>
    <string name="suggestionMessage1">"Add Subjects: "</string>
    <string name="suggestionMessage2">\n"Add Questions: "</string>
    <string name="suggestionMessage3">\n"Add Functions: "</string>
    <string name="scoreMessage">"Your score is: "</string>
    <string name="mail1Subject">Join me in the fight against world hunger!</string>
    <string name="mail1Text">Over a billion people suffer from hunger, there is an organization that serves food for the people in need.   You can contribute by playing their game: \'Make world better\'   Let\'s make the world a slightly better place!</string>
    <string name="mail2Subject">Make world better app review</string>
    <string name="resultInfo1">Please select your answer!</string>
    <string name="resultInfo2">How about you reconsider your answer!</string>
    <string name="mainInfo">Pick one category!</string>
    <string name="mathInfo">Your got:</string>

</resources>
