<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.projectquizapp.ResultActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            style="@style/Image"
            android:contentDescription="@string/desc4"
            android:src="@drawable/back2" />

        <TextView
            android:id="@+id/Congrats"
            style="@style/Title"
            android:text="@string/CongratsMessage"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Score"
                style="@style/Title"
                android:text="@string/Score" />

            <TextView
                style="@style/SubTitle"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Disclaimer"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/back2"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:text="@string/Back2"
                android:visibility="visible" />

            <Button
                android:id="@+id/share"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:text="@string/Share" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/mylayout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/FeedbackText"
                style="@style/SubTitle"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/SendOpinion"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FeedbackSuggestion"
                style="@style/SubTitle"
                android:text="@string/Suggest"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/suggestion1"
                style="@style/Body"
                android:text="@string/Suggestion1" />

            <CheckBox
                android:id="@+id/suggestion2"
                style="@style/Body"
                android:text="@string/Suggestion2" />

            <CheckBox
                android:id="@+id/suggestion3"
                style="@style/Body"
                android:text="@string/Suggestion3" />
        </LinearLayout>

        <TextView
            android:id="@+id/Feedback"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Feedback" />

        <RadioGroup
            android:id="@+id/rgFeedbackYN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/FeedbackSelectionA"
                style="@style/Body"
                android:text="@string/YesAnswer" />

            <RadioButton
                android:id="@+id/FeedbackSelectionB"
                style="@style/Body"
                android:text="@string/NoAnswer" />
        </RadioGroup>

        <Button
            android:id="@+id/sendFeedback"
            style="@style/Button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/mybutton"
            android:text="@string/SendFeed" />
    </LinearLayout>
</ScrollView>